--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,15 @@ MySQL/binlog.000026
 MySQL/binlog.index
 MySQL/binlog.000027
 MySQL/binlog.000015
+MySQL/binlog.000029
+MySQL/binlog.000029
+MySQL/binlog.000029
+MySQL/ib_logfile0
+MySQL/binlog.000029
+MySQL/ib_logfile0
+MySQL/ibdata1
+MySQL/undo_002
+MySQL/undo_001
+MySQL/undo_002
+MySQL/ibdata1
+MySQL/ib_logfile0
