--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,50 @@ MySQL/binlog.000026
 MySQL/binlog.index
 MySQL/binlog.000027
 MySQL/binlog.000015
+MySQL/binlog.000033
+MySQL/binlog.000034
+MySQL/binlog.000037
+MySQL/binlog.000036
+MySQL/binlog.000035
+MySQL/binlog.000033
+MySQL/binlog.000038
+MySQL/binlog.000033
+MySQL/binlog.000039
+MySQL/binlog.000041
+MySQL/binlog.000040
+MySQL/binlog.000042
+MySQL/binlog.000043
+MySQL/binlog.000044
+MySQL/binlog.000045
+MySQL/binlog.000046
+MySQL/binlog.000047
+MySQL/binlog.000048
+MySQL/binlog.000049
+MySQL/binlog.000050
+MySQL/binlog.000051
+MySQL/binlog.000052
+MySQL/binlog.000053
+MySQL/binlog.000054
+MySQL/binlog.000055
+MySQL/binlog.000056
+MySQL/binlog.000057
+MySQL/binlog.000058
+MySQL/binlog.000059
+MySQL/binlog.000060
+MySQL/binlog.000061
+MySQL/binlog.000076
+MySQL/binlog.000075
+MySQL/binlog.000074
+MySQL/binlog.000073
+MySQL/binlog.000072
+MySQL/binlog.000071
+MySQL/binlog.000070
+MySQL/binlog.000069
+MySQL/binlog.000068
+MySQL/binlog.000067
+MySQL/binlog.000066
+MySQL/binlog.000065
+MySQL/binlog.000064
+MySQL/binlog.000063
+MySQL/binlog.000062
+MySQL/binlog.000033
